css changes, header spacing problems on hacker page fixed more or less

--- a/public/stylesheets/MPstylesheet.css
+++ b/public/stylesheets/MPstylesheet.css
@@ -92,7 +92,7 @@ light blue: #32C3FF */
     }
   }
 
-  @media (min-width: 768px) {
+  @media (max-width: 768px) {
     .mp-styles {
       font-size: 12px;
     }
@@ -106,7 +106,7 @@ light blue: #32C3FF */
     }
   }
 
-  @media (min-width: 992px) {
+  @media (max-width: 992px) {
     .mp-styles {
       font-size: 12px;
     }
@@ -130,7 +130,7 @@ light blue: #32C3FF */
     }
   }
 
-  @media (min-width: 1200px) {
+  @media (max-width: 1200px) {
     .mp-styles {
       font-size: 12px;
     }
@@ -165,10 +165,18 @@ light blue: #32C3FF */
 .mp-cont-flex h2 {
   align-self: center;
   margin-top: 0.5em;
+  line-height: 1em;
+}
+
+.no-comment {
+  margin-top: 2em;
+  font-size: 1.8em;
+  letter-spacing: 1.5px;
+  text-align: center;
 }
 
 .mp-box-flex {
-  padding: 75px 40px;
+  padding: 75px 20px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -249,6 +257,25 @@ light blue: #32C3FF */
   }
 }
 
+@media (max-width: 550px) {
+  .mp-cont-flex h2 {
+    line-height: 1em;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .mp-cont-flex h2 {
+    line-height: 1em;
+  }
+}
+
+@media (max-width: 992px) {
+  .info-box2 h2 {
+    line-height: 2em;
+  }
+}
+
 .other-background {
   color:#2d354c;
   display: flex;
@@ -279,9 +306,9 @@ light blue: #32C3FF */
 .mp-box-flex .comment-item {
   width: 85%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 
 .mp-box-flex .metadata {
@@ -306,4 +333,5 @@ light blue: #32C3FF */
   height: 50vh;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 70%;
 }
